--- a/text2image-generator/requirements.txt
+++ b/text2image-generator/requirements.txt
@@ -1,5 +1,15 @@
-streamlit
-diffusers
-transformers
-scipy
-huggingface-hub
+certifi==2022.6.15
+charset-normalizer==2.0.12
+fasttext==0.9.2
+idna==3.3
+numpy==1.22.4
+Pillow==9.1.1
+pybind11==2.9.2
+requests==2.28.0
+torch==1.11.0
+torchaudio==0.11.0
+torchvision==0.12.0
+transformers==4.19.2
+typing_extensions==4.2.0
+urllib3==1.26.9
+diffusers==0.2.4
